--- a/TestProj/Jenkinsfile
+++ b/TestProj/Jenkinsfile
@@ -11,19 +11,19 @@ pipeline {
 
         stage('Restore Packages') {
             steps {
-                sh 'dotnet restore'    // use 'bat' on Windows
+                bat 'dotnet restore'    // use 'bat' on Windows
             }
         }
 
         stage('Build') {
             steps {
-                sh 'dotnet build --configuration Release'
+                bat 'dotnet build --configuration Release'
             }
         }
 
         stage('Run Tests') {
             steps {
-                sh 'dotnet test --no-build --verbosity normal'
+                bat 'dotnet test --no-build --verbosity normal'
             }
         }
     }
